--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,4 +26,8 @@ steps:
 - task: oc-cmd@2
   inputs:
     openshiftService: 'azure-devops-pru-test'
-    cmd: 'new-app --strategy=docker --name quarkus-hello-world'
+    cmd: '-n pru-test new-build --strategy=docker --dockerfile=src/main/docker/Dockerfile.jvm --binary --name quarkus-hello-world'
+- task: oc-cmd@2
+  inputs:
+    openshiftService: 'azure-devops-pru-test'
+    cmd: '-n pru-test start-build --from-dir="."  bc/quarkus-hello-world'
