--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,18 +22,18 @@ steps:
     goals: 'package'
 - task: Docker@2
   inputs:
-    containerRegistry: 'docker-hub'
+    containerRegistry: 'quarkus-nexus'
     repository: 'quarkus-hello-world'
     command: 'buildAndPush'
-    Dockerfile: '**/Dockerfile'
+    Dockerfile: '**/src/main/docker/Dockerfile.jvm'
 # - task: oc-setup@2
 #   inputs:
-#     openshiftService: 'azure-devops-pru-test'
+#     openshiftService: 'azure-devops-quarkus'
 # - task: oc-cmd@2
 #   inputs:
-#     openshiftService: 'azure-devops-pru-test'
-#     cmd: '-n pru-test new-build --strategy=docker --binary --name quarkus-hello-world'
+#     openshiftService: 'azure-devops-quarkus'
+#     cmd: '-n quarkus new-build --strategy=docker --binary --name quarkus-hello-world'
 # - task: oc-cmd@2
 #   inputs:
-#     openshiftService: 'azure-devops-pru-test'
-#     cmd: '-n pru-test start-build --from-dir="."  bc/quarkus-hello-world'
+#     openshiftService: 'azure-devops-quarkus'
+#     cmd: '-n quarkus start-build --from-dir="."  bc/quarkus-hello-world'
