--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,22 +10,22 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- task: Maven@3
-  inputs:
-    mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
-    jdkArchitectureOption: 'x64'
-    publishJUnitResults: true
-    testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
+# - task: Maven@3
+#   inputs:
+#     mavenPomFile: 'pom.xml'
+#     mavenOptions: '-Xmx3072m'
+#     javaHomeOption: 'JDKVersion'
+#     jdkVersionOption: '1.8'
+#     jdkArchitectureOption: 'x64'
+#     publishJUnitResults: true
+#     testResultsFiles: '**/surefire-reports/TEST-*.xml'
+#     goals: 'package'
 - task: Docker@2
   inputs:
     containerRegistry: 'quarkus-nexus'
     repository: 'quarkus-hello-world'
     command: 'buildAndPush'
-    Dockerfile: '**/src/main/docker/Dockerfile.jvm'
+    Dockerfile: '**/src/main/docker/Dockerfile.multistage'
 # - task: oc-setup@2
 #   inputs:
 #     openshiftService: 'azure-devops-quarkus'
