Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,8 @@ steps:
     repository: 'quarkus-hello-world'
     command: 'buildAndPush'
     Dockerfile: '**/src/main/docker/Dockerfile.multistage'
+    buildContext: '**/.'
+        
 # - task: oc-setup@2
 #   inputs:
 #     openshiftService: 'azure-devops-quarkus'
