--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <quarkus.version>1.0.0.Final</quarkus.version>
+    <quarkus.version>1.3.0.Alpha2</quarkus.version>
     <surefire-plugin.version>2.22.1</surefire-plugin.version>
   </properties>
   <dependencyManagement>
@@ -60,6 +60,18 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-smallrye-health</artifactId>
       <version>${quarkus.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.microshed</groupId>
+      <artifactId>microshed-testing-quarkus</artifactId>
+      <version>0.7.1</version>
+      <scope>test</scope>
+    </dependency>
+        <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>1.12.5</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
