set maven-settings to emptyDir

--- a/tekton/pipeline-run.yaml
+++ b/tekton/pipeline-run.yaml
@@ -7,8 +7,7 @@ spec:
     name: quarkus-hello-world-pipeline
   workspaces:
     - name: maven-settings
-      configMap:
-        name: custom-maven-settings
+      emptyDir: {}
     - name: shared-workspace
       persistentvolumeclaim:
         claimName: git-source-pvc
