switch buildah for kaniko

--- a/tekton/git-clone.yaml
+++ b/tekton/git-clone.yaml
@@ -99,3 +99,4 @@ spec:
         fi
         # Make sure we don't add a trailing newline to the result!
         echo -n "$RESULT_SHA" > $(results.commit.path)
+        chmod -R a+rw $CHECKOUT_DIR
