--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,46 +1,12 @@
 quarkus.application.name=quarkus-hello-world
 
 # datasource
-quarkus.datasource.url = jdbc:postgresql://localhost:5432/quarkus
-quarkus.datasource.driver = org.postgresql.Driver
+quarkus.datasource.jdbc.driver = org.postgresql.Driver
 quarkus.datasource.username = quarkus
 quarkus.datasource.password = quarkus
-quarkus.datasource.max-size=8
-quarkus.datasource.min-size=2
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
 
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=import.sql
-
-
-# OpenShift
-kubernetes.deployment.target = kubernetes,openshift
-
-
-openshift.group = mikecroft
-
-openshift.env-vars[0].name = QUARKUS_DATASOURCE_URL
-openshift.env-vars[0].value = jdbc:postgresql://postgresql:5432/quarkus
-
-openshift.liveness-probe.http-action-path = /health/live
-openshift.liveness-probe.initial-delay-seconds = 1
-openshift.liveness-probe.period-seconds = 1
-
-openshift.readiness-probe.http-action-path = /health/ready
-openshift.readiness-probe.initial-delay-seconds = 2
-openshift.readiness-probe.period-seconds = 1
-
-kubernetes.group = mikecroft
-
-kubernetes.env-vars[0].name = QUARKUS_DATASOURCE_URL
-kubernetes.env-vars[0].value = jdbc:postgresql://postgresql:5432/quarkus
-
-kubernetes.liveness-probe.http-action-path = /health/live
-kubernetes.liveness-probe.initial-delay-seconds = 1
-kubernetes.liveness-probe.period-seconds = 1
-
-kubernetes.readiness-probe.http-action-path = /health/ready
-kubernetes.readiness-probe.initial-delay-seconds = 2
-kubernetes.readiness-probe.period-seconds = 1
