update postgres user/password values

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -52,11 +52,12 @@ resources:
     memory: 128Mi
 
 postgresql:
-    postgresqlPassword: quarkus
-    postgresqlUsername: quarkus
-    postgresqlDatabase: quarkus
-    # image:
-    #     tag: "10"
+  global:
+    postgresql:
+      auth:
+        username: quarkus
+        password: quarkus
+        database: quarkus
 
 
 build:
