--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -9,3 +9,4 @@ dependencies:
 - name: postgresql
   version: ~15.0.0
   repository: "https://charts.bitnami.com/bitnami"
+  condition: localPostgres.disabled
