--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -58,7 +58,7 @@ localPostgres:
     value: quarkus
   - name: POSTGRESQL_PASSWORD
     value: quarkus
-  - name: POSTGRESQL_DB
+  - name: POSTGRESQL_DATABASE
     value: quarkus
   image: "image-registry.openshift-image-registry.svc:5000/openshift/postgresql@sha256:37d992f9159b539fff761065fc36cf59d90540e6e6657bf85830a162f6806060"
 
