--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -33,7 +33,7 @@ spec:
               {{- end }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
-          image: "{{ .Values.image.repository }}:{{ .Chart.AppVersion }}"
+          image: "{{ tpl (.Values.image.repository) . }}:{{ .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
