--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -3,7 +3,7 @@ name: quarkus-hello-world
 description: A Helm chart for Kubernetes
 type: application
 version: 0.1.0
-appVersion: latest
+appVersion: 0.1.0
 
 dependencies:
 - name: postgresql
