--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,7 +1,8 @@
 replicaCount: 1
 
 image:
-  repository: 'image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ include "quarkus-hello-world.fullname" . }}:{{ .Chart.AppVersion }}'
+  # repository: 'image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ include "quarkus-hello-world.fullname" . }}:{{ .Chart.AppVersion }}'
+  repository: 'ghcr.io/mikecroft/quarkus-hello-world:{{ .Chart.AppVersion }}'
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
@@ -60,8 +61,8 @@ localPostgres:
     value: quarkus
   - name: POSTGRESQL_DATABASE
     value: quarkus
-  image: "image-registry.openshift-image-registry.svc:5000/openshift/postgresql@sha256:37d992f9159b539fff761065fc36cf59d90540e6e6657bf85830a162f6806060"
-
+  # image: "image-registry.openshift-image-registry.svc:5000/openshift/postgresql@sha256:37d992f9159b539fff761065fc36cf59d90540e6e6657bf85830a162f6806060"
+  image: "quay.io/fedora/postgresql-15@sha256:4b587a1131f9fee16513c350727b765bd47332cc403d15da22880b41440c5d38"
 
 postgresql:
   postgresql:
